fix: update env example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 GITHUB_API_TOKEN=
 
-DB_NAME=
-DB_USER=
-DB_PASS=
-DB_HOST=
-DB_PORT=
+DB_NAME=testcasedb
+DB_USER=postgres
+DB_PASS=postgres
+DB_HOST=localhost
+DB_PORT=5434
+
+TYPEORM_SYNCHRONIZE=false
+TYPEORM_LOGGING=true
+TYPEORM_LOGGER=advanced-console
+TYPEORM_ENTITIES=./src/../models/*.ts
