--- a/package.json
+++ b/package.json
@@ -76,6 +76,15 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coveragePathIgnorePatterns": [
+      "node_modules",
+      "test-config",
+      "interfaces",
+      "config",
+      ".module.ts",
+      "main.ts"
+  ],
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": ["main.ts", ".module.ts" ]
   }
 }
