--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "supertest": "^6.3.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
@@ -83,8 +83,11 @@
       "config",
       ".module.ts",
       "main.ts"
-  ],
+    ],
     "testEnvironment": "node",
-    "testPathIgnorePatterns": ["main.ts", ".module.ts" ]
+    "testPathIgnorePatterns": [
+      "main.ts",
+      ".module.ts"
+    ]
   }
 }
