fix: update env.example

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,13 @@ DB_PASS=postgres
 DB_HOST=localhost
 DB_PORT=5434
 
+TEST_DB_NAME=testcasedbtest
+TEST_DB_USER=test
+TEST_DB_PASS=test
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5435
+
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=true
 TYPEORM_LOGGER=advanced-console
-TYPEORM_ENTITIES=./src/../models/*.ts
+TYPEORM_ENTITIES=./src/../entities/*.entity.ts
